--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
         اما ایمان داشت که می‌تواند.<br>
         برای مادرش، برای پدر خاک‌خورده‌اش، و برای دلی که یاد گرفته بود حتی میان غصه‌ها هم شکوفه بدهد.</p>
 
+        <p>این داستان متاسفانه یا خوشبختانه واقعی بود <br>
+        میگم خوشبختانه چون خیلی داستان‌ها به ما درس‌هایی میده که میتونیم توی زندگیمون ازش استفاده کنیم <br>
+    تا شاید بتونیم قدر داشته‌هامون رو بیشتر از غم ناداشته‌هامون بدونیم <br>
+اگه فقط همین داستان رو برات تعریف میکردم شاید بعد یک هفته یا یک روز یا حتی بعد چندساعت کلا فراموش میکردی و یادت نمیموند، <br>
+بخاطر همین هم یه هدیه از دست‌سازه‌های این دختر رو گرفت و برات آوردم تا هروقت اون رو میبینی سخت‌تر برای هدف‌هات بجنگی، قدرداان داشته‌هات،پدرت، مادرت و برادرت باشی، از حالای زندگیت بیشتر لذت ببری و کلی حس خوب دیگه از این هدیه بگیری. <br>
+تو حق داری توی مسیر زندگیت خسته بشی یواش‌تر توی مسیرت حرکت کنی ولی حق اینکه جا بزنی رو نداری چرا که همین داستان این دختر برات یه نشونه‌ای هست که تو پتانسیل قوی بودن رو داری و میتونی برای رسیدن به خواسته‌هات تلاش کنی و بهشون برسی 😉 </p>
+
       </div>
 
 
@@ -140,3 +147,4 @@
   </div>
 </body>
 </html>
+
